2010-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Turn truncate-lines off for text/plain pages.

2010-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images): Add menu to images.
	(w3m-download-this-image, w3m-print-this-image-url): New functions.
	(w3m-link-menu): Add them; enable menu only when url or image is there.

2010-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-window-hscroll): Revert 2010-01-13 change.

2010-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-cache-available-p): Now, pages with neither Last-Modified
	header and ETag header are treated as dynamically-generated pages.
	(w3m-cache-header-delete-variable-part): Contination lines are also
	removed.

2010-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-dirlist-cgi, w3m-set-display-ins-del):
	Honor w3m-command-environment.
	Suggested by Toru TSUNEYOSHI <t_tuneyosi@hotmail.com>.

2010-02-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-redisplay-this-page): Save positions.

2010-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-reload-this-page): Save positions.

	* w3m-hist.el (w3m-history-store-position)
	(w3m-history-restore-position): Use line number and column number to
	save positions.

2010-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-previous-page): Restore positions as well when
	jumping within a page.
	(w3m-view-this-url-1): Reset hscroll after retrieving a new page.
	(w3m-view-this-url): Save positions first.
	(w3m-delete-buffer): Restore positions in a page being left.
	(w3m-goto-url): Don't save positions here.

	* w3m-util.el (w3m-popup-buffer): Restore positions only when buffer to
	be displayed is hidden, not always.

2010-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-next-anchor, w3m-previous-anchor, w3m-next-form)
	(w3m-previous-form, w3m-next-image, w3m-previous-image): Remove unused
	var `st'.

2010-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>
